--- a/posts/2024-08-30-grm-lookups/index.qmd
+++ b/posts/2024-08-30-grm-lookups/index.qmd
@@ -1,7 +1,7 @@
 ---
-title: "2024-08-30-grm-lookups"
+title: "GRM lookups"
 author: Gibran Hemani
-date: "`r Sys.Date()`"
+date: "2024-08-30"
 categories: []
 execute:
     eval: false
